# Data-Science

./: .gitignore  .pylintrc  README.md  config.py  learn_pyspark.ipynb  main.py  pyproject.toml  requirements.txt
ai-agents/: tool.py
ai-agents/learn-langgraph/: agents.ipynb  concepts.ipynb  main.py  react_agent.ipynb
codes/deep-learning-concepts/: activation_functions.py  errors.py  neuron.py
codes/transformers/: tokenization.ipynb
data/: attributes.md  data_cleaning.md  data_integration.md  data_reduction.md  preprocessing.md  similarity.md
data-fundamentals/: notes.md
data-mining/: README.md  attributes.md  data_cleaning.md  data_integration.md  data_reduction.md  preprocessing.md  similarity.md
deep-learning-indaba/: Introduction_to_Deep_Learning.ipynb  LLMs_Foundations.ipynb  Machine_learning_classification.ipynb
dl/: README.md  activation_functions.py  errors.py  neuron.py  perceptron.md  utils.py
explainable-ai/: XAI.ipynb  learn.ipynb
llms/: README.md  function_calling.py  quantization.ipynb
ml/: README.md  learn_numpy.ipynb  metrics.py
notebooks/: Intro_to_LLM.ipynb  Introduction_to_Deep_Learning.ipynb  Introduction_to_ML_using_JAX.ipynb  Linear Regression.ipynb  Logistic Regression.ipynb  Machine_learning_classification.ipynb  XAI.ipynb
notes/: supervised.md
practical/: Linear Regression - Copy (1).ipynb  Linear Regression.ipynb  Neural Network Essentials.ipynb
presentations/: Automation and AI.pptx  RAG Presentation.pptx
resources/: Intro to AI.docx  Steps Broken Down.docx  xai.txt
statistics/: README.md  utils.py
(+30 files in other folders)
