[project]
name = "zindi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydotplus>=2.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]